图片家在路径

--- a/output/index.html
+++ b/output/index.html
@@ -38,13 +38,18 @@
 })(navigator);</script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script>
-    wx.config({ debug: false,
+    wx.config({
+        debug: false,
         appID: 'wx708acc93bd6ad1b0',
         timestamp: 1432232951,
         nonceStr: 'KzGn8gBOuYLHlhhd',
         signature: 'abb08778babff03d454a2a3edc07e0f66fcad02c',
         jsApiList: [ 'checkJsApi', 'onMenuShareTimeline', 'onMenuShareAppMessage', 'onMenuShareQQ', 'onMenuShareWeibo' ]
     });
+    </script>
+    <script>
+        //var StaticPath = "";
+        var StaticPath = "http://tjvvv.com/demo/jinba";
     </script>
     <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/app.min.css">
     <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/style.css">
