--- a/output/index.html
+++ b/output/index.html
@@ -48,8 +48,8 @@
     });
     </script>
     <script>
-        //var StaticPath = "";
-        var StaticPath = "http://tjvvv.com/demo/jinba";
+        var StaticPath = "";
+        //var StaticPath = "http://tjvvv.com/demo/jinba";
     </script>
     <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/app.min.css">
     <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/style.css">
@@ -81,109 +81,109 @@
     <section class="app-content">
         <section id="story1" class="page">
             <section class="page-content middle-center">
-                <div class="ui-text ui-text1 a-fadeinB"></div>
-                <div class="ui-text ui-text2 a-fadeinB"></div>
-                <div class="ui-text ui-text3 a-fadeinB"></div>
-                <div class="ui-text ui-text4 a-fadeinB"></div>
-                <div class="ui-text ui-text5 a-fadeinB"></div>
+                <div class="ui-text ui-text1 animated zoomIn"></div>
+                <div class="ui-text ui-text2 animated bounceIn"></div>
+                <div class="ui-text ui-text3 animated fadeInUp"></div>
+                <div class="ui-text ui-text4 animated fadeInUp"></div>
+                <div class="ui-text ui-text5 animated fadeIn"></div>
             </section>
         </section>
         <section id="story2" class="page">
             <section class="page-content middle-center">
-                <div class="ui-text ui-text1 a-fadeinB"></div>
-                <div class="ui-text ui-text2 a-fadeinB"></div>
-                <div class="ui-text ui-text3 a-fadeinB"></div>
+                <div class="ui-text ui-text1 animated zoomIn"></div>
+                <div class="ui-text ui-text2 animated bounceIn"></div>
+                <div class="ui-text ui-text3 animated fadeInUp"></div>
             </section>
         </section>
         <section id="story3" class="page">
             <section class="page-content middle-center">
-                <div class="ui-text ui-text1 a-fadeinB"></div>
-                <div class="ui-text ui-text2 a-fadeinB"></div>
-                <div class="ui-text ui-text3 a-fadeinB"></div>
-                <div class="ui-text ui-text4 a-fadeinB">
-                    <div class="ui-text ui-text11 a-fadeinB"></div>
-                    <div class="ui-text ui-text22 a-fadeinB"></div>
-                    <div class="ui-text ui-text33 a-fadeinB"></div>
-                    <div class="ui-text ui-text44 a-fadeinB"></div>
-                    <div class="ui-text ui-text55 a-fadeinB"></div>
+                <div class="ui-text ui-text1 animated lightSpeedIn"></div>
+                <div class="ui-text ui-text2 animated fadeInUp"></div>
+                <div class="ui-text ui-text3 animated fadeInUp"></div>
+                <div class="ui-text ui-text4">
+                    <div class="ui-text ui-text11 animated bounceIn"></div>
+                    <div class="ui-text ui-text22 animated bounceIn"></div>
+                    <div class="ui-text ui-text33 animated bounceIn"></div>
+                    <div class="ui-text ui-text44 animated bounceIn"></div>
+                    <div class="ui-text ui-text55 animated bounceIn"></div>
                 </div>
             </section>
         </section>
         <section id="story4" class="page">
             <section class="page-content middle-center">
-                <div class="ui-text ui-text1 a-fadeinB"></div>
-                <div class="ui-text ui-text2 a-fadeinB"></div>
-                <div class="ui-text ui-text3 a-fadeinB"></div>
-                <div class="ui-text ui-text4 a-fadeinB"></div>
-                <div class="ui-text ui-text5 a-fadeinB"></div>
-                <div class="ui-text ui-text6 a-fadeinB"></div>
-                <div class="ui-text ui-text7 a-fadeinB"></div>
-                <div class="ui-text ui-text8 a-fadeinB"></div>
+                <div class="ui-text ui-text1 animated lightSpeedIn"></div>
+                <div class="ui-text ui-text2 animated fadeInUp"></div>
+                <div class="ui-text ui-text3 animated fadeInUp"></div>
+                <div class="ui-text ui-text4 animated fadeInUp"></div>
+                <div class="ui-text ui-text5 animated fadeInUp"></div>
+                <div class="ui-text ui-text6 animated fadeInUp"></div>
+                <div class="ui-text ui-text7 animated bounceInUp"></div>
+                <div class="ui-text ui-text8 animated bounceInUp"></div>
             </section>
         </section>
         <section id="story5" class="page">
             <section class="page-content middle-center">
-                <div class="ui-text ui-text1 a-fadeinB"></div>
-                <div class="ui-text ui-text2 a-fadeinB"></div>
-                <div class="ui-text ui-text3 a-fadeinB"></div>
-                <div class="ui-text ui-text4 a-fadeinB"></div>
+                <div class="ui-text ui-text1 animated rotateInDownLeft"></div>
+                <div class="ui-text ui-text2 animated rotateInUpLeft"></div>
+                <div class="ui-text ui-text3 animated flipInY"></div>
+                <div class="ui-text ui-text4 animated flipInY"></div>
             </section>
         </section>
         <section id="story6" class="page">
             <section class="page-content middle-center">
-                <div class="ui-text ui-text1 a-fadeinB"></div>
-                <div class="ui-text ui-text2 a-fadeinB"></div>
-                <div class="ui-text ui-text3 a-fadeinB"></div>
-                <div class="ui-text ui-text4 a-fadeinB"></div>
+                <div class="ui-text ui-text1 animated rollIn"></div>
+                <div class="ui-text ui-text2 animated flipInX"></div>
+                <div class="ui-text ui-text3 animated bounceIn"></div>
+                <div class="ui-text ui-text4 animated bounceIn"></div>
             </section>
         </section>
         <section id="story7" class="page">
             <section class="page-content middle-center">
-                <div class="ui-text ui-text1 a-fadeinB"></div>
-                <div class="ui-text ui-text2 a-fadeinB"></div>
-                <div class="ui-text ui-text3 a-fadeinB"></div>
-                <div class="ui-text ui-text4 a-fadeinB"></div>
+                <div class="ui-text ui-text1 animated slideInLeft"></div>
+                <div class="ui-text ui-text2 animated zoomIn"></div>
+                <div class="ui-text ui-text3 animated fadeInUp"></div>
+                <div class="ui-text ui-text4 animated fadeIn"></div>
             </section>
         </section>
         <section id="story8" class="page">
             <section class="page-content middle-center">
-                <div class="ui-text ui-text1 a-fadeinB"></div>
-                <div class="ui-box ui-box1 a-fadeinL"></div>
-                <div class="ui-arrow ui-arrow1 a-fadeinL"></div>
-                <div class="ui-box ui-box2 a-fadeinT"></div>
-                <div class="ui-arrow ui-arrow2 a-fadeinR"></div>
-                <div class="ui-box ui-box3 a-fadeinR"></div>
-                <div class="ui-arrow ui-arrow3 a-fadeinT"></div>
-                <div class="ui-box ui-box4 a-fadeinT"></div>
-                <div class="ui-arrow ui-arrow4 a-fadeinL"></div>
-                <div class="ui-box ui-box5 a-fadeinT"></div>
-                <div class="ui-arrow ui-arrow5 a-fadeinL"></div>
-                <div class="ui-box ui-box6 a-fadeinL"></div>
+                <div class="ui-text ui-text1 animated fadeInUp"></div>
+                <div class="ui-box ui-box1 animated fadeIn"></div>
+                <div class="ui-arrow ui-arrow1 animated fadeInLeft"></div>
+                <div class="ui-box ui-box2 animated fadeIn"></div>
+                <div class="ui-arrow ui-arrow2 animated fadeInDown"></div>
+                <div class="ui-box ui-box3 animated fadeIn"></div>
+                <div class="ui-arrow ui-arrow3 animated fadeInRight"></div>
+                <div class="ui-box ui-box4 animated fadeIn"></div>
+                <div class="ui-arrow ui-arrow4 animated fadeInDown"></div>
+                <div class="ui-box ui-box5 animated fadeIn"></div>
+                <div class="ui-arrow ui-arrow5 animated fadeInLeft"></div>
+                <div class="ui-box ui-box6 animated fadeIn"></div>
             </section>
         </section>
         <section id="story9" class="page">
             <section class="page-content middle-center">
-                <div class="ui-text ui-text1 a-fadeinB"></div>
-                <div class="ui-text ui-text2 a-fadeinB"></div>
-                <div class="ui-text ui-text3 a-fadeinB"></div>
-                <div class="ui-text ui-text4 a-fadeinB"></div>
-                <div class="ui-text ui-text5 a-fadeinB"></div>
-                <div class="ui-text ui-text6 a-fadeinB"></div>
-                <div class="ui-text ui-text7 a-fadeinB">
+                <div class="ui-text ui-text1 animated fadeInUp"></div>
+                <div class="ui-text ui-text2 animated slideInRight"></div>
+                <div class="ui-text ui-text3 animated slideInRight"></div>
+                <div class="ui-text ui-text4 animated slideInRight"></div>
+                <div class="ui-text ui-text5 animated fadeInUp"></div>
+                <div class="ui-text ui-text6 animated fadeInUp"></div>
+                <div class="ui-text ui-text7 animated fadeInUp">
                     <a class="leftbtn" href="#"></a>
                     <a class="rightbtn" href="#"></a>
                 </div>
-                <div class="ui-text ui-text8 a-fadeinB"></div>
+                <div class="ui-text ui-text8 animated fadeInUp"></div>
             </section>
         </section>
         <section id="story10" class="page">
             <section class="page-content middle-center">
-                <div class="ui-text ui-text1 a-fadeinB"></div>
-                <div class="ui-text ui-text2 a-fadeinB"></div>
-                <div class="ui-text ui-text3 a-fadeinB"></div>
-                <div class="ui-text ui-text4 a-fadeinB"></div>
-                <div class="ui-text ui-text5 a-fadeinB"></div>
-                <div class="ui-text ui-text6 a-fadeinB"></div>
+                <div class="ui-text ui-text1 animated fadeInUp"></div>
+                <div class="ui-text ui-text2 animated fadeInUp"></div>
+                <div class="ui-text ui-text3 animated fadeInUp"></div>
+                <div class="ui-text ui-text4 animated fadeInUp"></div>
+                <div class="ui-text ui-text5 animated fadeInUp"></div>
+                <div class="ui-text ui-text6 animated fadeInUp"></div>
             </section>
         </section>
     </section>
