--- a/output/index.html
+++ b/output/index.html
@@ -82,7 +82,7 @@
         <section id="story1" class="page">
             <section class="page-content middle-center">
                 <div class="ui-text ui-text1 animated zoomIn"></div>
-                <div class="ui-text ui-text2 animated bounceIn"></div>
+                <div class="ui-text ui-text2 animated flipInX"></div>
                 <div class="ui-text ui-text3 animated fadeInUp"></div>
                 <div class="ui-text ui-text4 animated fadeInUp"></div>
                 <div class="ui-text ui-text5 animated fadeIn"></div>
@@ -111,14 +111,14 @@
         </section>
         <section id="story4" class="page">
             <section class="page-content middle-center">
-                <div class="ui-text ui-text1 animated lightSpeedIn"></div>
-                <div class="ui-text ui-text2 animated fadeInUp"></div>
-                <div class="ui-text ui-text3 animated fadeInUp"></div>
-                <div class="ui-text ui-text4 animated fadeInUp"></div>
-                <div class="ui-text ui-text5 animated fadeInUp"></div>
-                <div class="ui-text ui-text6 animated fadeInUp"></div>
-                <div class="ui-text ui-text7 animated bounceInUp"></div>
-                <div class="ui-text ui-text8 animated bounceInUp"></div>
+                <div class="ui-text ui-text1 animated fadeInUp"></div>
+                <div class="ui-text ui-text2 animated slideInRight"></div>
+                <div class="ui-text ui-text3 animated slideInRight"></div>
+                <div class="ui-text ui-text4 animated slideInRight"></div>
+                <div class="ui-text ui-text5 animated slideInRight"></div>
+                <div class="ui-text ui-text6 animated slideInRight"></div>
+                <div class="ui-text ui-text7 animated lightSpeedIn"></div>
+                <div class="ui-text ui-text8 animated lightSpeedIn"></div>
             </section>
         </section>
         <section id="story5" class="page">
@@ -168,8 +168,8 @@
                 <div class="ui-text ui-text3 animated slideInRight"></div>
                 <div class="ui-text ui-text4 animated slideInRight"></div>
                 <div class="ui-text ui-text5 animated fadeInUp"></div>
-                <div class="ui-text ui-text6 animated fadeInUp"></div>
-                <div class="ui-text ui-text7 animated fadeInUp">
+                <div class="ui-text ui-text6"></div>
+                <div class="ui-text ui-text7">
                     <a class="leftbtn" href="#"></a>
                     <a class="rightbtn" href="#"></a>
                 </div>
@@ -178,12 +178,12 @@
         </section>
         <section id="story10" class="page">
             <section class="page-content middle-center">
-                <div class="ui-text ui-text1 animated fadeInUp"></div>
-                <div class="ui-text ui-text2 animated fadeInUp"></div>
-                <div class="ui-text ui-text3 animated fadeInUp"></div>
-                <div class="ui-text ui-text4 animated fadeInUp"></div>
+                <div class="ui-text ui-text1 animated fadeInDown"></div>
+                <div class="ui-text ui-text2"></div>
+                <div class="ui-text ui-text3 animated fadeInDown"></div>
+                <div class="ui-text ui-text4 animated zoomIn"></div>
                 <div class="ui-text ui-text5 animated fadeInUp"></div>
-                <div class="ui-text ui-text6 animated fadeInUp"></div>
+                <div class="ui-text ui-text6 animated fadeIn"></div>
             </section>
         </section>
     </section>
