--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     });
     </script>
     <script>
-        var StaticPath = "";
-        //var StaticPath = "http://tjvvv.com/demo/jinba";
+        //var StaticPath = "";
+        var StaticPath = "http://tjvvv.com/demo/jinba";
     </script>
     <link rel="stylesheet" href="css/app.min.css">
     <link rel="stylesheet" href="css/style.less">
@@ -65,6 +65,7 @@
                 <div class="ui-text ui-text1 animated zoomIn"></div>
                 <div class="ui-text ui-text2 animated bounceIn"></div>
                 <div class="ui-text ui-text3 animated fadeInUp"></div>
+                <div class="ui-text ui-text4 animated fadeIn"></div>
             </section>
         </section>
         <section id="story3" class="page">
@@ -100,6 +101,7 @@
                 <div class="ui-text ui-text3 animated flipInY"></div>
                 <div class="ui-text ui-text4 animated flipInY"></div>
             </section>
+            <div class="switchimg animated fadeIn"></div>
         </section>
         <section id="story6" class="page">
             <section class="page-content middle-center">
