--- a/output/index.html
+++ b/output/index.html
@@ -51,8 +51,8 @@
         //var StaticPath = "";
         var StaticPath = "http://tjvvv.com/demo/jinba";
     </script>
-    <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/app.min.css">
-    <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/style.css">
+    <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/app.min.css?2">
+    <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/style.css?2">
     <!--分享信息start-->
     <!--分享给朋友数据-->
     <meta name="share_msg"
@@ -78,6 +78,11 @@
         </div>
     </div>
     <div class="ui-guideWrap"></div>
+    <header class="app-header">
+        <a href="javascript:void(0);" class="u-globalAudio">
+            <audio src="" autoplay loop data-src="img/bgm.mp3"></audio>
+        </a>
+    </header>
     <section class="app-content">
         <section id="story1" class="page">
             <section class="page-content middle-center">
@@ -131,20 +136,20 @@
             </section>
             <div class="switchimg animated fadeIn"></div>
         </section>
-        <section id="story6" class="page">
-            <section class="page-content middle-center">
-                <div class="ui-text ui-text1 animated rollIn"></div>
-                <div class="ui-text ui-text2 animated flipInX"></div>
-                <div class="ui-text ui-text3 animated bounceIn"></div>
-                <div class="ui-text ui-text4 animated bounceIn"></div>
-            </section>
-        </section>
         <section id="story7" class="page">
             <section class="page-content middle-center">
                 <div class="ui-text ui-text1 animated slideInLeft"></div>
                 <div class="ui-text ui-text2 animated zoomIn"></div>
                 <div class="ui-text ui-text3 animated fadeInUp"></div>
                 <div class="ui-text ui-text4 animated fadeIn"></div>
+            </section>
+        </section>
+        <section id="story6" class="page">
+            <section class="page-content middle-center">
+                <div class="ui-text ui-text1 animated rollIn"></div>
+                <div class="ui-text ui-text2 animated flipInX"></div>
+                <div class="ui-text ui-text3 animated bounceIn"></div>
+                <div class="ui-text ui-text4 animated bounceIn"></div>
             </section>
         </section>
         <section id="story8" class="page">
@@ -190,10 +195,10 @@
         </section>
     </section>
     <div id="share-mask" class="a-fadein"><div class="share-mask-tip"></div></div>
-    <script src="http://tjvvv.com/demo/jinba/js/zepto.js"></script>
-    <script src="http://tjvvv.com/demo/jinba/js/flippage.js"></script>
-    <script src="http://tjvvv.com/demo/jinba/js/share.js"></script>
-    <script src="http://tjvvv.com/demo/jinba/js/loader.js"></script>
-    <script src="http://tjvvv.com/demo/jinba/js/script.js"></script>
+    <script src="http://tjvvv.com/demo/jinba/js/zepto.js?2"></script>
+    <script src="http://tjvvv.com/demo/jinba/js/flippage.js?2"></script>
+    <script src="http://tjvvv.com/demo/jinba/js/share.js?2"></script>
+    <script src="http://tjvvv.com/demo/jinba/js/loader.js?2"></script>
+    <script src="http://tjvvv.com/demo/jinba/js/script.js?2"></script>
 </body>
 </html>
