--- a/output/index.html
+++ b/output/index.html
@@ -48,11 +48,11 @@
     });
     </script>
     <script>
-        var StaticPath = "";
-        //var StaticPath = "http://tjvvv.com/demo/jinba";
+        //var StaticPath = "";
+        var StaticPath = "http://tjvvv.com/demo/jinba";
     </script>
-    <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/app.min.css">
-    <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/style.css">
+    <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/app.min.css?2">
+    <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/style.css?2">
     <!--分享信息start-->
     <!--分享给朋友数据-->
     <meta name="share_msg"
