--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     });
     </script>
     <script>
-        var StaticPath = "";
-        //var StaticPath = "http://tjvvv.com/demo/jinba";
+        //var StaticPath = "";
+        var StaticPath = "http://tjvvv.com/demo/jinba";
     </script>
-    <link rel="stylesheet" href="css/app.min.css">
-    <link rel="stylesheet" href="css/style.less">
+    <link rel="stylesheet" href="css/app.min.css?2">
+    <link rel="stylesheet" href="css/style.less?2">
     <!--分享信息start-->
     <!--分享给朋友数据-->
     <meta name="share_msg"
