--- a/output/index.html
+++ b/output/index.html
@@ -5,7 +5,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>Document</title>
+    <title>劲霸-创富汇</title>
     <script type="text/javascript">if(/Android (\d+\.\d+)/.test(navigator.userAgent)){
     var version = parseFloat(RegExp.$1);
     if(version>2.3){
@@ -48,22 +48,22 @@
     });
     </script>
     <script>
-        //var StaticPath = "";
-        var StaticPath = "http://tjvvv.com/demo/jinba";
+        var StaticPath = "";
+        //var StaticPath = "http://tjvvv.com/demo/jinba";
     </script>
     <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/app.min.css?2">
     <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/style.css?2">
     <!--分享信息start-->
     <!--分享给朋友数据-->
     <meta name="share_msg"
-        data-title="分享给好友标题"
-        data-desc="分享给好友描述"
+        data-title="劲霸-创富汇"
+        data-desc="微力量精选"
         data-imgUrl="分享给好友图片"
         data-link=""
     >
     <!--分享到朋友圈数据-->
     <meta name="share_line"
-        data-title="分享到朋友圈标题11"
+        data-title="劲霸-创富汇-微力量精选"
         data-imgUrl=""
         data-link=""
     >
@@ -80,7 +80,7 @@
     <div class="ui-guideWrap"></div>
     <header class="app-header">
         <a href="javascript:void(0);" class="u-globalAudio">
-            <audio src="" autoplay loop data-src="img/bgm.mp3"></audio>
+            <audio src="" autoplay loop data-src="/img/bgm.mp3"></audio>
         </a>
     </header>
     <section class="app-content">
@@ -178,7 +178,7 @@
                 <div class="ui-text ui-text6"></div>
                 <div class="ui-text ui-text7">
                     <a class="leftbtn" href="#"></a>
-                    <a class="rightbtn" href="#"></a>
+                    <a class="rightbtn" href="form.html"></a>
                 </div>
                 <div class="ui-text ui-text8 animated fadeInUp"></div>
             </section>
