--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     });
     </script>
     <script>
-        var StaticPath = "";
-        //var StaticPath = "http://tjvvv.com/demo/jinba";
+        //var StaticPath = "";
+        var StaticPath = "http://tjvvv.com/demo/jinba";
     </script>
     <link rel="stylesheet" href="css/app.min.css?2">
     <link rel="stylesheet" href="css/style.less?2">
@@ -168,6 +168,7 @@
     </section>
     <div id="share-mask" class="a-fadein"><div class="share-mask-tip"></div></div>
     <script src="js/zepto.js?2"></script>
+    <script src="js/fastclick.js"></script>
     <script src="js/flippage.js?2"></script>
     <script src="js/share.js?2"></script>
     <script src="js/loader.js?2"></script>
