--- a/output/index.html
+++ b/output/index.html
@@ -48,8 +48,8 @@
     });
     </script>
     <script>
-        var StaticPath = "";
-        //var StaticPath = "http://tjvvv.com/demo/jinba";
+        //var StaticPath = "";
+        var StaticPath = "http://tjvvv.com/demo/jinba";
     </script>
     <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/app.min.css?2">
     <link rel="stylesheet" href="http://tjvvv.com/demo/jinba/css/style.css?2">
@@ -196,6 +196,7 @@
     </section>
     <div id="share-mask" class="a-fadein"><div class="share-mask-tip"></div></div>
     <script src="http://tjvvv.com/demo/jinba/js/zepto.js?2"></script>
+    <script src="js/fastclick.js"></script>
     <script src="http://tjvvv.com/demo/jinba/js/flippage.js?2"></script>
     <script src="http://tjvvv.com/demo/jinba/js/share.js?2"></script>
     <script src="http://tjvvv.com/demo/jinba/js/loader.js?2"></script>
