--- a/output/form.html
+++ b/output/form.html
@@ -172,7 +172,7 @@
     </form>
     </div>
     <script src="http://tjvvv.com/demo/jinba/js/zepto.js?2"></script>
-    <script src="js/fastclick.js"></script>
+    <script src="http://tjvvv.com/demo/jinba/js/fastclick.js"></script>
     <script src="http://tjvvv.com/demo/jinba/js/icheck.js?2"></script>
     <script>
     $(function(){
