--- a/output/index.html
+++ b/output/index.html
@@ -196,7 +196,7 @@
     </section>
     <div id="share-mask" class="a-fadein"><div class="share-mask-tip"></div></div>
     <script src="http://tjvvv.com/demo/jinba/js/zepto.js?2"></script>
-    <script src="js/fastclick.js"></script>
+    <script src="http://tjvvv.com/demo/jinba/js/fastclick.js"></script>
     <script src="http://tjvvv.com/demo/jinba/js/flippage.js?2"></script>
     <script src="http://tjvvv.com/demo/jinba/js/share.js?2"></script>
     <script src="http://tjvvv.com/demo/jinba/js/loader.js?2"></script>
