--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>劲霸-创富汇</title>
+    <title>“劲霸·创富汇”微力量竞选</title>
     <script type="text/javascript" src="js/viewport.js?__inline"></script>
     <script type="text/javascript" src="js/platform.js?__inline"></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
