--- a/output/form.html
+++ b/output/form.html
@@ -5,7 +5,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>劲霸-创富汇</title>
+    <title>“劲霸·创富汇”微力量竞选</title>
     <script type="text/javascript">if(/Android (\d+\.\d+)/.test(navigator.userAgent)){
     var version = parseFloat(RegExp.$1);
     if(version>2.3){
